--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
 </head>
 
 <div class="iframe-container">
-    <iframe src="https://blog.purwadi.web.id" loading="lazy" title="Responsive iframe example" allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture" allowfullscreen />
+    <iframe src="https://blog.purwadi.web.id" loading="lazy" title="Sigit Purwadi's Blog" allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture" allowfullscreen />
 </div>
 
 </body>
